jellyseerr/resources/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyseerr
  labels:
    app.kubernetes.io/name: jellyseerr
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: https-xmple-io
  hostnames:
    - db3000.xmple.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /jellyseerr
      backendRefs:
        - name: jellyseerr
          port: 80
          kind: Service
